<resources>
    <string name="app_name">VMUSEUM</string>
    <string name="your_string_here" translatable="false">
        <u>Overview →</u>
    </string>
    <string name="intro1">The application supports users in visiting the Vietnam Museum of Ethnology</string>
    <string name="book_tickets">Book tickets</string>
    <string name="book_tickets_content">VMUSEUM supports users to book tickets online, including student tickets</string>
    <string name="opening_instruction">You can see instructions for using the application in the settings section.</string>
    <string name="press_setting_button">Press the setting button.</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_opeing_content">If you encounter any difficulties, you can see how to use the application in the Settings -> Instruction section.</string>
    <string name="numberTV">Phone number</string>
    <string name="email">Email</string>
    <string name="password_changeTV">PASSWORD CHANGE</string>
    <string name="password_desTV">" Leave passwords empty, when you don't want to change it."</string>
    <string name="delete_all_user_data">DELETE ALL USER DATA</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="vietnamese">🇻🇳 Vietnamese</string>
    <string name="english">\ud83c\uddec\ud83c\udde7 English</string>
    <string name="japanese">🇯🇵 Japanese</string>
    <string name="chinese">🇨🇳 Chinese</string>
    <string name="set_your_languageBT">Set your language</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="full_nameTV">Fullname</string>
    <string name="log_out">Log out</string>
    <string name="search_bar">Search</string>
    <string name="qr_instruction">QR code</string>
    <string name="artifact_instruction">Artifacts</string>
    <string name="map_instruction">Map</string>
    <string name="edit_profile_instruction">Edit profile</string>
    <string name="language_instruction">Change language</string>
    <string name="newsnevents_instruction">News and Events</string>
    <string name="notification_instruction">See notification</string>
    <string name="contact_admin">Contact admin</string>
    <string name="delete_account_instruction">Delete account</string>
    <string name="editinfo">Edit Info</string>
    <string name="setting">Setting</string>
    <string name="nightmode">Night mode</string>
    <string name="language">Language</string>
    <string name="notification">Notifications</string>
    <string name="aboutus">About Us</string>
    <string name="securitynprivacy">Security and Privacy</string>
    <string name="dangerzone">Danger Zone</string>
    <string name="logout">Log out</string>
    <string name="deleteaccount">DELETE ACCOUNT</string>
    <string name="privacy">When you use our services, you’re trusting us with your information. We understand this is a big responsibility and work hard to protect your information and put you in control.</string>
    <string name="privacy1">This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information. \n This Privacy Policy applies to all of the services offered by VMUSEUM and its affiliates, including services offered on other sites, but excludes services that have separate privacy policies that do not incorporate this Privacy Policy. \n This Privacy Policy doesn’t apply to services that have separate privacy policies that do not incorporate this Privacy Policy.</string>
    <string name="privacy2">We collect information to provide better services to all our users — from figuring out basic stuff like which language you speak, to more complex things like which ads you’ll find most useful, the people who matter most to you online, or which YouTube videos you might like.\n Information you give us. For example, many of our services require you to sign up for a VMUSEUM Account. When you do, we’ll ask for personal information, like your name, email address, telephone number or credit card. If you want to take full advantage of the sharing features we offer, we might also ask you to create a publicly visible VMUSEUM Profile, which may include your name and photo.\n Information we get from your use of our services. We collect information about the services that you use and how you use them, like when you watch a video on YouTube, visit a website that uses our advertising services, or view and interact with our ads and content. This information includes:\n Device information: We collect device-specific information (such as your hardware model, operating system version, unique device identifiers, and mobile network information including phone number). VMUSEUM may associate your device identifiers or phone number with your VMUSEUM Account.</string>
    <string name="privacy3">Log information: When you use our services or view content provided by VMUSEUM, we automatically collect and store certain information in server logs. This includes:\n Details of how you used our service, such as your search queries.\n Telephony log information like your phone number, calling-party number, forwarding numbers, time and date of calls, duration of calls, SMS routing information and types of calls.\n Internet protocol address.\n Device event information such as crashes, system activity, hardware settings, browser type, browser language, the date and time of your request and referral URL.\n Cookies that may uniquely identify your browser or your VMUSEUM Account.\n Location information: When you use VMUSEUM services, we may collect and process information about your actual location. We use various technologies to determine location, including IP address, GPS, and other sensors that may, for example, provide VMUSEUM with information on nearby devices, Wi-Fi access points and cell towers.</string>
    <string name="manage">Manage</string>
    <string name="booked_tickets">Tickets</string>
    <string name="exchanged_gifts">Gifts</string>
    <string name="priority_tickets">Priority</string>
    <string name="updateinfo">UPDATE INFORMATION</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="home">Home</string>
    <string name="artifacts">Artifacts</string>
    <string name="introduce">Introduce</string>
    <string name="strategy">Museum strategy</string>
    <string name="history">Museum history</string>
    <string name="spaces">Spaces</string>
    <string name="personel">Oganization and Personel</string>
    <string name="cooperation">Cooperation</string>
    <string name="news_events">News and Events</string>
    <string name="artifact_category">Artifact Category</string>
    <string name="today">Today</string>
    <string name="before">Before</string>
    <string name="qrscan">Scan a QR or choose from the device</string>
    <string name="turn_flash">Turn on Flash</string>
    <string name="choose_qr">Choose a QR</string>
    <string name="architect">Architect garden</string>
    <string name="peoples_vietnam">Peoples of Vietnam</string>
    <string name="peoples_world">Peoples of the world</string>
    <string name="detail"><u>Detail</u></string>
    <string name="book_ticket">BOOK TICKET</string>
    <string name="see_direction">See direction</string>
    <string name="see_detail">See detail</string>
    <string name="nha_cham">1. Cham House</string>
    <string name="ghe_ngo_khome">2. Khomer Boat</string>
    <string name="thuy_dinh">3. Water Temple</string>
    <string name="nha_viet">4. Viet House</string>
    <string name="nha_thuyen">5. Boat House</string>
    <string name="nha_rong_ba_na">6. Ba Na Communal House</string>
    <string name="nha_e_de">7. E De House</string>
    <string name="nha_mo_gia_rai">8. Gia Rai Tomb</string>
    <string name="nha_mo_co_tu">9. Co Tu Tomb</string>
    <string name="lo_ren_nung">10. Nung forge</string>
    <string name="nha_tay">11. Tay House</string>
    <string name="nha_dao">12. Dao House</string>
    <string name="nha_h_mong">13. H\'Mong House</string>
    <string name="nha_ha_nhi">14. Ha Nhi House</string>
    <string name="nha_thuc_nghiem">15. Experimental House</string>
    <string name="nha_hang">16. Restaurant</string>
    <string name="cua_hang_sach">17. Bookstore</string>
    <string name="cua_hang_luu_niem">18. Souvenir Shop</string>
    <string name="cafe">19. Cafe</string>
    <string name="cafe_cake">20. Cafe and Cake</string>
    <string name="toa_canh_dieu">Kite Tower</string>
    <string name="toa_trong_dong">Bronze Drum Tower</string>
    <string name="qr_title">Scan artifact QR code</string>
    <string name="qr_content1">To scan the artifact QR code, you can press the qr button in the middle of the Bottom Navigation Bar. Then, point the phone camera at the artifact QR code, the system will automatically recognize and redirect to the artifact information page</string>
    <string name="qr_content2">You can also select qr image from the phone\'s photo library (note that only qr image of artifacts in the Museum can be used). In addition, the application also supports flash to scan qr code in low light environment</string>
    <string name="artifact_title">View artifact category</string>
    <string name="artifact_content1">To view the artifact category, you can press the category button in the Bottom Navigation Bar, then, you can select the artifact category, as well as the artifact you want to view</string>
    <string name="artifact_content2">The search bar above the artifact category interface helps you to search for artifacts quickly</string>
    <string name="map_title">View map</string>
    <string name="map_content1">To view the map, you can click on the map image on the Home interface, a map will appear, you can select the points on the map to view the detailed information of that point</string>
    <string name="edit_profile_title">Edit personal information</string>
    <string name="edit_profile_content1">To edit personal information, you can click on the setting button in the Bottom Navigation Bar. After being navigated to the Settings screen, you can click on the Edit profile button to edit your personal information</string>
    <string name="edit_profile_content2">You can change your avatar by clicking on the current avatar image on the Settings interface or in the Edit profile interface, then select a new image from the phone\'s photo library. In addition, you can also change your display name or email and password</string>
    <string name="title_activity_gift" translatable="false">Gift</string>
    <string name="welcome_to_vmuseum">WELCOME TO THE VMUSEUM! \nFirst, please choose your language!</string>
    <string name="date">Date:</string>
    <string name="number_of_tickets">Number of tickets:</string>
    <string name="price_per_ticket">Price per ticket:</string>
    <string name="discount">Priority discounts:</string>
    <string name="total">Total:</string>
    <string name="pay_with_zalopay">Pay with ZaloPay</string>
    <string name="detail_price"><u>Ticket price detail</u></string>
    <string name="payment_success">Ticket Payment Successful</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="amount_paid">Amount paid:</string>
    <string name="paid_with_zalopay">Paid with ZaloPay</string>
    <string name="home_screen">TO HOME SCREEN</string>
    <string name="unused_ticket">UNUSED TICKETS</string>
    <string name="used_ticket">USED TICKETS</string>
    <string name="use_coin">Use coin </string>
    <string name="giftTab0">Gift</string>
    <string name="giftTab1">Exchanged</string>
</resources>