<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SettingPackage.LanguageActivity">

    <TextView
        android:id="@+id/openingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/alegreysan"
        android:gravity="center"
        android:text="@string/welcome_to_vmuseum"
        android:textColor="?attr/colorSecondary"
        android:textSize="20sp"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_language"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/languageRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/VNRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vietnamese" />

                <RadioButton
                    android:id="@+id/ENRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/JPRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese" />

                <RadioButton
                    android:id="@+id/CNRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese" />

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/set_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/set_your_languageBT" />

</LinearLayout>