<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRActivity">

    <androidx.camera.view.PreviewView
        android:layout_width="match_parent"
        android:id="@+id/cameraPreview"
        android:layout_height="match_parent">

    </androidx.camera.view.PreviewView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/qrscan"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@drawable/background_qr_image"
            android:id="@+id/cameraBox"
            android:contentDescription="QRBox" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:focusable="false"
            android:background="#3F000000"
            android:backgroundTint="@color/black"
            android:layout_alignParentBottom="true"
            android:contentDescription="Image container" />

        <ImageView
            android:id="@+id/flashButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/flash_on_24"
            android:contentDescription="Flash" />

        <TextView
            android:id="@+id/flashText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:text="@string/turn_flash"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/chooseImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/image_24"
            android:contentDescription="Choose QR" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:text="@string/choose_qr"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


</FrameLayout>